<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">Spotify Streamer</string>
    <string name="btn2">Scores App</string>
    <string name="btn3">Library App</string>
    <string name="btn4">Build It Bigger</string>
    <string name="btn5">Bacond Reader</string>
    <string name="mytitle">My Nanodegree Apps!</string>
    <string name="capstone">Cpastone: My Own App</string>
</resources>
