<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toast_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ahmedkasapbashi.myapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#3373e2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mytitle"
        android:id="@+id/textView"
        android:layout_marginTop="21dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:id="@+id/button"
        android:layout_marginTop="26dp"
        android:width="200dp"
        android:height="55dp"
        android:background="#1b5f9f"
        android:textColor="#ffffff"
        android:textAllCaps="true"
        android:typeface="normal"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:onClick="onClick"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:id="@+id/button2"
        android:width="200dp"
        android:height="55dp"
        android:background="#1b5f9f"
        android:textColor="#ffffff"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:onClick="onClick"
        android:layout_alignStart="@+id/button"
        android:typeface="normal"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:id="@+id/button3"
        android:width="200dp"
        android:height="55dp"
        android:background="#1b5f9f"
        android:textColor="#ffffff"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button2"
        android:onClick="onClick"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:typeface="normal"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:id="@+id/button4"
        android:width="200dp"
        android:height="55dp"
        android:background="#1b5f9f"
        android:textColor="#ffffff"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:onClick="onClick"
        android:layout_alignStart="@+id/button3"
        android:typeface="normal"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        android:id="@+id/button5"
        android:width="200dp"
        android:height="55dp"
        android:background="#1b5f9f"
        android:textColor="#ffffff"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:onClick="onClick"
        android:typeface="normal"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        android:height="55dp"
        android:width="200dp"
        android:typeface="normal"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#f40d98"
        android:layout_marginTop="5dp" />

    <TextView android:id="@+id/txtToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        />
</RelativeLayout>
